--- a/Resources/Private/Sass/_Settings/_All.scss
+++ b/Resources/Private/Sass/_Settings/_All.scss
@@ -6,6 +6,11 @@
 //
 
 
+/*
+SASS Functions, Mixins and Variables
+
+Styleguide 1
+*/
 @import "_Functions",
         "_Mixins",
         "_MediaQueries";
