[BUGFIX] Make sure the all Sass functions are aviable in the main variable file

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-@import "_Variables",
-        "_Settings/_All";
+@import "_Settings/_All",
+	"_Variables";
 
 //
 // Helper- & Generic-classes
