[FEATURE] Automatically generate the modifer comment for each brandColor key - resolves #29

--- a/Resources/Private/Sass/Generic/_Brand.scss
+++ b/Resources/Private/Sass/Generic/_Brand.scss
@@ -23,8 +23,7 @@ Styleguide 5.1.1
 
 /*
 Brand color helpers
-
-.brandColor-primary - Primary brand color.
+#{generateModifierComments($brand-colors, "brandColor-", " brand color.")}
 
 Markup:
 <span class="{$modifiers}">Brand color helpers.</span>
