--- a/Resources/Private/Templates/Page/Page.html
+++ b/Resources/Private/Templates/Page/Page.html
@@ -1,17 +1,17 @@
-{namespace flux=Tx_Flux_ViewHelpers}
+{namespace flux=FluidTYPO3\Flux\ViewHelpers}
 {namespace v=Tx_Vhs_ViewHelpers}
 
 <f:layout name="Page" />
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:flexform id="standard-page" label="Standard page">
-			<flux:flexform.grid>
-				<flux:flexform.grid.row>
-					<flux:flexform.grid.column colPos="0" name="Content" />
-				</flux:flexform.grid.row>
-			</flux:flexform.grid>
-		</flux:flexform>
+		<flux:form id="standard-page" label="Standard page">
+			<flux:grid>
+				<flux:grid.row>
+					<flux:grid.column colPos="0" name="Content" />
+				</flux:grid.row>
+			</flux:grid>
+		</flux:form>
 	</f:section>
 
 	<f:section name="Main">
