[TASK] Remove the dashes from the flux template id's to supress the warnings of invalid template names

--- a/Resources/Private/Templates/Page/Page.html
+++ b/Resources/Private/Templates/Page/Page.html
@@ -5,7 +5,7 @@
 
 <div xmlns="http://www.w3.org/1999/xhtml" xmlns:flux="http://fedext.net/ns/flux/ViewHelpers" xmlns:v="http://fedext.net/ns/vhs/ViewHelpers" xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 	<f:section name="Configuration">
-		<flux:form id="standard-page" label="Standard page">
+		<flux:form id="standardPage" label="Standard page">
 			<flux:grid>
 				<flux:grid.row>
 					<flux:grid.column colPos="0" name="Content" />
