[TASK] Revert the automated heading rule generation
This decision was made, as the generation via an @each loop was to much wizardry, the code base should be simple enough for starters to begin learning Sass with

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -139,7 +139,7 @@ legend {
 	width: 100%;
 	@extend %margin-bottom;
 
-	@include font-size(map-fetch($headings, elements h4 font-size));
+	@include font-size($base-font-size + 4);
 	color: map-get($headings, color);
 	border-bottom: 1px $basic-border-style $basic-border-color;
 
