--- a/Resources/Private/Sass/_Variables.scss
+++ b/Resources/Private/Sass/_Variables.scss
@@ -94,37 +94,11 @@ $half-spacing:          $basic-spacing / 2;
 // =============================================================================
 // Headings
 // =============================================================================
-// Default settings for all heading elements, you can pass additional rules into each
-// element map f.e.
-// h1: (
-//   font-size: 36,
-//   color: red,
-//   margin-bottom: 12px
-// )
+// Default settings for all heading elements.
 $headings: (
 	fontFamily:           false,
 	fontWeight:           $bold,
-	color:                #000,
-	elements: (
-		h1: (
-			font-size: 36
-		),
-		h2: (
-			font-size: 30
-		),
-		h3: (
-			font-size: 24
-		),
-		h4: (
-			font-size: 20
-		),
-		h5: (
-			font-size: 16
-		),
-		h6: (
-			font-size: 14
-		)
-	)
+	color:                #000
 );
 
 
