[FEATURE] Initial setup of the atomic-design css architecture #47

--- a/Resources/Private/Sass/Atoms/_Quote.scss
+++ b/Resources/Private/Sass/Atoms/_Quote.scss
@@ -1,17 +1,11 @@
-//
-// Quotes
-//
-// Styleguide 2.5
-//
-
 /*
-Quote elements
+Quotes
 
 Markup:
 The following text <q>is an inline-quote</q>
 <blockquote>This text is a full quotation element</blockquote>
 
-Styleguide 2.5.1
+Styleguide 4.11
 */
 q {
 	/**
