--- a/Resources/Private/Sass/Atoms/_Ruler.scss
+++ b/Resources/Private/Sass/Atoms/_Ruler.scss
@@ -1,17 +1,10 @@
-//
-// Rulers
-//
-// Styleguide 2.6
-//
-
-
 /*
-Horizontal ruler element
+Rulers
 
 Markup:
 <hr>
 
-Styleguide 2.6.1
+Styleguide 4.10
 */
 %horizontal-ruler,
 hr {
