--- a/Resources/Private/Sass/Atoms/_Table.scss
+++ b/Resources/Private/Sass/Atoms/_Table.scss
@@ -1,14 +1,5 @@
 /*
-Table elements
-
-Basic styling and extended classes for tables.
-
-Styleguide 2.9
-*/
-
-
-/*
-Table classes
+Tables
 
 .table - Base class for all table-styles.
 .table.table--bordered - Extends the base '.table' class to an basic bordered table.
@@ -44,7 +35,7 @@ Markup:
 	</tbody>
 </table>
 
-Styleguide 2.9.1
+Styleguide 4.9
 */
 table {
 	max-width: 100%;
