--- a/Resources/Private/Sass/Atoms/_Button.scss
+++ b/Resources/Private/Sass/Atoms/_Button.scss
@@ -1,5 +1,5 @@
 /*
-Button Object
+Buttons
 
 Display an anchor tag as a button
 
@@ -14,7 +14,7 @@ Markup:
 <input type="submit" class="{$modifiers}" value="Submit" />
 <a class="{$modifiers}">An anchor element.</a>
 
-Styleguide 4.1.1
+Styleguide 4.8
 */
 %btn,
 .btn {
