--- a/Resources/Private/Sass/Generic/Utilities/_Widths.scss
+++ b/Resources/Private/Sass/Generic/Utilities/_Widths.scss
@@ -1,10 +1,3 @@
-/*
-Width helpers
-
-Styleguide 3.2
-*/
-
-
 // Grid mixin
 @mixin grid-setup($namespace:  "") {
 	/**
@@ -89,7 +82,7 @@ Styleguide 3.2
 
 
 /*
-Percentage classes
+Width classes
 
 Sizes which are used in conjunction with other objects and abstractions like the grid system.
 
@@ -140,6 +133,6 @@ Sizes which are used in conjunction with other objects and abstractions like the
 Markup:
 <div class="{$modifiers} kss___exampleGridItem">.{$modifiers}</div>
 
-Styleguide 3.2.1
+Styleguide 3.3
 */
 @include grid-setup();
