[DOCS] Add the appropriate section headers for the default css organism files

--- a/Resources/Private/Sass/Organisms/_SiteHeader.scss
+++ b/Resources/Private/Sass/Organisms/_SiteHeader.scss
@@ -1,12 +1,4 @@
 /*
- * Site dependent styles
- *
- * @package #{ext_directory()}
- * @path /_Styles.scss
- */
-
-
-/* =============================================================================
-$ High level wrapper and elements
-================================================================================ */
+Site Header
+*/
 .siteHeader { }
