--- a/Resources/Private/Sass/Atoms/_List.scss
+++ b/Resources/Private/Sass/Atoms/_List.scss
@@ -3,7 +3,7 @@ List elements
 
 Basic styling for lists and definition elements
 
-Styleguide 4.5
+Styleguide 3.5
 */
 
 
@@ -28,14 +28,14 @@ Markup:
 	<li>I am the fourth list-element.</li>
 </ol>
 
-Styleguide 4.5.1
+Styleguide 3.5.1
 */
 menu,
 ol,
 ul {
 	padding: 0 0 0 rs(40);
-	@extend %reset-margin-top;
-	@extend %margin-bottom;
+	@extend %u-m0;
+	@extend %u-mb;
 }
 li > ul,
 li > ol {
@@ -76,11 +76,11 @@ Markup:
 	<dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
 </dl>
 
-Styleguide 4.5.3
+Styleguide 3.5.3
 */
 dl {
-	@extend %reset-margin-top;
-	@extend %margin-bottom;
+	@extend %u-m0;
+	@extend %u-mb;
 }
 dd {
 	@if $legacy-normalizecss {
@@ -95,14 +95,14 @@ dd {
 Horizontal definition abstraction
 */
 .dl--horizontal {
-	@extend .cf;
+	@extend .u-cf;
 	dt {
 		float: $start;
 		width: 19%;
 		overflow: hidden;
 		clear: $start;
 		text-align: $end;
-		@extend .text-break;
+		@extend %u-textBreak;
 	}
 	dd {
 		margin-#{$start}: 21%;
