--- a/Resources/Private/Sass/Atoms/_Media.scss
+++ b/Resources/Private/Sass/Atoms/_Media.scss
@@ -45,17 +45,17 @@ figcaption { /* 6 */
 	@include font-size(($base-font-size - 2));
 }
 iframe {
-	@extend %margin-bottom;
+	@extend %u-mb;
 }
 
 /*
 Multimedia elements
 */
 video {
-	@extend %margin-bottom;
+	@extend %u-mb;
 }
 audio {
-	@extend %margin-bottom;
+	@extend %u-mb;
 	min-width: 65%;
 
 	&:not([controls]) {
