--- a/Resources/Private/Sass/Atoms/_Typography.scss
+++ b/Resources/Private/Sass/Atoms/_Typography.scss
@@ -3,7 +3,7 @@ Typographic elements
 
 Basic styling for all typographic related elements.
 
-Styleguide 4.2
+Styleguide 3.2
 */
 
 
@@ -13,11 +13,11 @@ Base paragraph
 Markup:
 <p>I am an paragraph.</p>
 
-Styleguide 4.2.1
+Styleguide 3.2.1
 */
 p {
-	@extend %reset-margin-top;
-	@extend %margin-bottom;
+	@extend %u-m0;
+	@extend %u-mb;
 }
 
 /*
@@ -26,7 +26,7 @@ Bold and strong elements
 Markup:
 <b>This text should be displayed in a bolder font-weight than the standard one.</b>
 
-Styleguide 4.2.2
+Styleguide 3.2.2
 */
 b,
 strong {
@@ -39,7 +39,7 @@ Small text emphasis
 Markup:
 <small>This text should be smaller than the standard one.</small>
 
-Styleguide 4.2.3
+Styleguide 3.2.3
 */
 small { font-size: 80%; }
 
@@ -49,7 +49,7 @@ Abbreviation element
 Markup:
 <abbr title="The title of the abbreviation">This is an abbreviation.</abbr>
 
-Styleguide 4.2.4
+Styleguide 3.2.4
 */
 abbr[title] { /* Addresses styling not present in IE7/8/9, S5, Chrome. */
 	border-bottom: 1px dotted;
@@ -62,7 +62,7 @@ Marked text emphasis element
 Markup:
 <mark>This text should be displayed in a special manner.</mark>
 
-Styleguide 4.2.5
+Styleguide 3.2.5
 */
 mark { /* Addresses styling not present in IE6/7/8/9. */
 	background: map-get($brand-colors, primary);
@@ -75,7 +75,7 @@ Definition element
 Markup:
 <dfn>This text represents the defining instance of a term.</dfn>
 
-Styleguide 4.2.6
+Styleguide 3.2.6
 */
 dfn {
 	font-style: italic; /* Addresses styling not present in S5, Chrome. */
@@ -88,7 +88,7 @@ Markup:
 Regular text - <sup>this will be displayed higher and smaller than the main span of text.</sup><br>
 Regular text - <sub>this will be displayed lower and smaller than the main span of text.</sub>
 
-Styleguide 4.2.7
+Styleguide 3.2.7
 */
 sub,
 sup { /* Prevents `sub` and `sup` affecting `line-height` in all browsers. gist.github.com/413930 */
