--- a/Resources/Private/Sass/Molecules/_Form.scss
+++ b/Resources/Private/Sass/Molecules/_Form.scss
@@ -1,7 +1,7 @@
 /*
 Form
 
-Styleguide 5.3
+Styleguide 4.3
 */
 
 /*
@@ -24,7 +24,7 @@ form {
 		margin-left: 0;
 		margin-right: 0;
 	}
-	@extend %margin-bottom;
+	@extend %u-mb;
 }
 
 /*
@@ -44,7 +44,7 @@ Markup:
 	<button type="submit" class="btn">Sign in</button>
 </form>
 
-Styleguide 5.3.1
+Styleguide 4.3.1
 */
 .form--inline {
 	label {
