[TASK] Use the improved border-box version from css-tricks.com #48

--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -18,12 +18,16 @@ Declarations which should be put at the top of the document e.g. @font-face decl
 @if $global-border-box {
 	/*
 	Global border-box
+	@docs http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
 	*/
+	html {
+  	box-sizing: border-box;
+	}
 	* {
 		&,
 		&:before,
 		&:after {
-			box-sizing: border-box;
+			box-sizing: inherit;
 		}
 	}
 }
