[TASK] Rename all width classes #48
* Added the common prefix for utilitie classes
* Moved from the speaking class scheme to a fraction based name scheme

--- a/Resources/Private/Sass/Molecules/_Grid.scss
+++ b/Resources/Private/Sass/Molecules/_Grid.scss
@@ -5,9 +5,9 @@ Grid object which makes use of the generated width classes.
 
 Markup:
 <div class="g">
-	<div class="gi one-third">first collumn</div>
-	<div class="gi one-third">second collumn</div>
-	<div class="gi one-third">third collumn</div>
+	<div class="gi u-w1/3">first collumn</div>
+	<div class="gi u-w1/3">second collumn</div>
+	<div class="gi u-w1/3">third collumn</div>
 </div>
 
 Styleguide 4.1
