[TASK] Remove some inconsistent header comments from the generic sass files

--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -1,5 +1,5 @@
 /*
-[Generic] Head
+Head
 
 Declarations which should be put at the top of the document e.g. @font-face declarations and CSS viewports
 */
