--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -1,7 +1,7 @@
 /*
 Head
 
-Declarations which should be put at the top of the document e.g. @font-face declarations and CSS viewports
+Declarations which should be put at the top of the document e.g. @font-face declarations and CSS viewports.
 */
 
 
