--- a/Resources/Private/Sass/Molecules/_Navigation.scss
+++ b/Resources/Private/Sass/Molecules/_Navigation.scss
@@ -1,7 +1,7 @@
 /*
 Navigation
 
-A modified version of the navigation object from inuit.css
+A modified version of the navigation object from inuit.css.
 
 .nav - Throws a list into horizontal mode.
 .nav.nav--stacked - Throws a list into vertical mode.
