--- a/Resources/Private/Sass/Templates/_Print.scss
+++ b/Resources/Private/Sass/Templates/_Print.scss
@@ -1,7 +1,7 @@
 /*
-[Generic] Print
+Print
 
-Print styles - Inlined to avoid another HTTP connection
+Print styles - Inlined to avoid another HTTP connection.
 */
 
 
