--- a/Resources/Private/Sass/Utilities/_Layout.scss
+++ b/Resources/Private/Sass/Utilities/_Layout.scss
@@ -23,7 +23,7 @@ Styleguide 2.1.1
 /*
 Float clearfix
 
-Contain floats: h5bp.com/q
+Contain floats: http://www.h5bp.com/q
 
 Markup:
 <div class="u-cf">This element will clear any floats inside of it.</div>
