--- a/Resources/Private/Sass/Atoms/_Button.scss
+++ b/Resources/Private/Sass/Atoms/_Button.scss
@@ -1,7 +1,7 @@
 /*
 Buttons
 
-Display an anchor tag as a button
+Display an anchor tag as a button.
 
 .btn           - Display an element as an button.
 .btn.btn--full - Set the button width to the width of it's parent element.
@@ -21,7 +21,7 @@ Styleguide 3.8
 	display: inline-block;
 	@include rem(margin-bottom, map-get($button, bottomSpacing));
 	/**
-	 * Set in em's so we can change the size of the button depending on the font-size
+	 * Set in em's so we can change the size of the button depending on the font-size.
 	 */
 	padding: map-get($button, innerPadding);
 	border: 0;
@@ -49,8 +49,7 @@ Styleguide 3.8
 	display: block;
 	text-align: center;
 	/**
-	 * The following is so that this class works properly on inputs as well
-	 * as anchor tags.
+	 * The following is so that this class works properly on inputs as well as anchor tags.
 	 */
 	padding-right: 0;
 	padding-left: 0;
