--- a/Resources/Private/Sass/Atoms/_Heading.scss
+++ b/Resources/Private/Sass/Atoms/_Heading.scss
@@ -1,7 +1,7 @@
 /*
 Heading elements
 
-Basic styling for headings and sub-headings
+Basic styling for headings and sub-headings.
 
 Styleguide 3.1
 */
@@ -27,7 +27,7 @@ h4, h5, h6 {
 	color: map-get($headings, color);
 	/**
 	 * Optimized kerning for large font sizes
-	 * use this only on large font-sizes (f.e. headings) to avoid performance issues
+	 * use this only on large font-sizes (f.e. headings) to avoid performance issues.
 	 */
 	text-rendering: optimizeLegibility;
 }
