--- a/Resources/Private/Sass/Molecules/_Form.scss
+++ b/Resources/Private/Sass/Molecules/_Form.scss
@@ -9,7 +9,7 @@ Form wrapper elements
 */
 fieldset {
 	/**
-	 * Reset border, margin, and padding to define a consistend style accross all browsers
+	 * Reset border, margin, and padding to define a consistend style accross all browsers.
 	 */
 	border: 0;
 	margin: 0;
@@ -30,7 +30,7 @@ form {
 /*
 Form-Inline abstraction
 
-.form--inline - Display a `<form>` and all it's content in a horizontal order
+.form--inline - Display a `<form>` and all it's content in a horizontal order.
 
 Markup:
 <form class="{$modifiers}">
