--- a/Resources/Private/Sass/Utilities/_Display.scss
+++ b/Resources/Private/Sass/Utilities/_Display.scss
@@ -8,9 +8,9 @@ Styleguide 2.2
 /*
 Visibillity helpers
 
-.u-block - Display the target as an block element
-.u-hidden - Hide from both screenreaders and browsers: h5bp.com/u
-.u-invisible - Hide visually and from screenreaders, but maintain layout
+.u-block - Display the target as an block element.
+.u-hidden - Hide from both screenreaders and browsers: http://www.h5bp.com/u
+.u-invisible - Hide visually and from screenreaders, but maintain layout.
 
 Markup:
 <div class="{$modifiers}">This element won't be visible.</div>
