[FEATURE] Add a 'Vendor' js which externalizes common modules/libs from continuous re-compiling #46

--- a/Resources/Private/Layouts/Page.html
+++ b/Resources/Private/Layouts/Page.html
@@ -6,6 +6,7 @@
 
 <v:asset.style name="BaseStylesheet" path="EXT:<!= pkg.name !>/Resources/Public/Stylesheets/Main.css" standalone="1" />
 <v:asset.script name="Modernizr" path="EXT:<!= pkg.name !>/Resources/Public/Javascripts/Sources/Vendor/modernizr/modernizr.js" allowMoveToFooter="0" />
+<v:asset.script name="VendorPackages" path="EXT:<!= pkg.name !>/Resources/Public/Javascripts/Build/Vendor.min.js" allowMoveToFooter="1" />
 <v:asset.script name="App" path="EXT:<!= pkg.name !>/Resources/Public/Javascripts/Build/App.min.js" allowMoveToFooter="1" />
 
 
