--- a/Resources/Private/Sass/Atoms/_Quote.scss
+++ b/Resources/Private/Sass/Atoms/_Quote.scss
@@ -1,11 +1,17 @@
 /*
 Quotes
 
+Styleguide 3.11
+*/
+
+/*
+Default Quote
+
 Markup:
 The following text <q>is an inline-quote</q>
 <blockquote>This text is a full quotation element</blockquote>
 
-Styleguide 3.11
+Styleguide 3.11.1
 */
 q {
 	/**
