--- a/Resources/Private/Sass/Atoms/_Ruler.scss
+++ b/Resources/Private/Sass/Atoms/_Ruler.scss
@@ -1,10 +1,16 @@
 /*
 Rulers
 
+Styleguide 3.10
+*/
+
+/*
+Default horizontal ruler
+
 Markup:
 <hr>
 
-Styleguide 3.10
+Styleguide 3.10.1
 */
 %horizontal-ruler,
 hr {
