--- a/Resources/Private/Sass/Molecules/_Grid.scss
+++ b/Resources/Private/Sass/Molecules/_Grid.scss
@@ -1,5 +1,11 @@
 /*
-Grid
+Grids
+
+Styleguide 4.1
+*/
+
+/*
+Grid Object
 
 Grid object which makes use of the generated width classes.
 
@@ -10,7 +16,7 @@ Markup:
 	<div class="gi u-w1/3">third collumn</div>
 </div>
 
-Styleguide 4.1
+Styleguide 4.1.1
 */
 $grid-direction:  $start;
 
