--- a/Resources/Private/Sass/Utilities/_Typography.scss
+++ b/Resources/Private/Sass/Utilities/_Typography.scss
@@ -28,7 +28,7 @@ Other utilities
 .u-textBreak - Break strings when their length exceeds the width of their container.
 
 Markup:
-<p class="{$modifiers}">I am an paragraph.</p>
+<p class="{$modifiers}">Extralongparagraphhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</p>
 
 Styleguide 2.3.2
 */
