--- a/Resources/Private/Sass/Atoms/_Code.scss
+++ b/Resources/Private/Sass/Atoms/_Code.scss
@@ -1,13 +1,19 @@
 /*
 Code & pre-formatted text elements
 
+Styleguide 3.12
+*/
+
+/*
+Default styles
+
 Markup:
 <code>.css{ color: red; }</code><br>
 <kbd>.css{ color: red; }</kbd><br>
 <samp>.css{ color: red; }</samp><br>
 <pre>.css{ color: red; }</pre>
 
-Styleguide 3.12
+Styleguide 3.12.1
 */
 code,
 kbd,
