[TASK] Add placeholders for all utility classes, code consistency

--- a/Resources/Private/Sass/Atoms/_Heading.scss
+++ b/Resources/Private/Sass/Atoms/_Heading.scss
@@ -20,6 +20,7 @@ Markup:
 
 Styleguide 3.1.1
 */
+%heading,
 h1, h2, h3,
 h4, h5, h6 {
 	@if map-get($headings, fontFamily) { font-family: map-get($headings, fontFamily); }
@@ -52,21 +53,21 @@ Markup:
 
 Styleguide 3.1.2
 */
-h1, .h1 {
+h1, .h1, %h1 {
 	font-size: 36px;
 }
-h2, .h2 {
+h2, .h2, %h2 {
 	font-size: 30px;
 }
-h3, .h3 {
+h3, .h3, %h3 {
 	font-size: 24px;
 }
-h4, .h4 {
+h4, .h4, %h4 {
 	font-size: 20px;
 }
-h5, .h5 {
+h5, .h5, %h5 {
 	font-size: 16px;
 }
-h6, .h6 {
+h6, .h6, %h6 {
 	font-size: 16px;
 }
