--- a/Resources/Private/Sass/Molecules/_Grid.scss
+++ b/Resources/Private/Sass/Molecules/_Grid.scss
@@ -20,12 +20,14 @@ Styleguide 4.1.1
 */
 $grid-direction:  $start;
 
+%grid,
 .g,
 .grid {
 	@extend .u-cf;
 	margin-left: -($column-gutter / 2);
 	margin-right: -($column-gutter / 2);
 }
+%grid__item,
 .gi,
 .grid__item {
 	// Base styles for .gi--# classes
