--- a/Resources/Private/Sass/Molecules/_Navigation.scss
+++ b/Resources/Private/Sass/Molecules/_Navigation.scss
@@ -23,14 +23,21 @@ Markup:
 
 Styleguide 4.2.1
 */
+%nav,
 .nav {
 	@extend %reset-list;
 	li { display: inline-block; }
 	a { display: block; }
 }
-.nav--stacked li {
-	display: list-item;
+
+%nav--stacked,
+.nav--stacked {
+	li {
+		display: list-item;
+	}
 }
+
+%nav--fit,
 .nav--fit {
 	display: table;
 	width: 100%;
