--- a/Resources/Private/Sass/Utilities/_Brand.scss
+++ b/Resources/Private/Sass/Utilities/_Brand.scss
@@ -16,6 +16,7 @@ Markup:
 
 Styleguide 2.5.1
 */
+%u-brand,
 .u-brand {
 	font-family: $brand-font-family;
 	color: map-get($brand-colors, primary);
@@ -44,6 +45,7 @@ Markup:
 
 Styleguide 2.5.3
 */
+%u-brandFace,
 .u-brandFace { font-family: $brand-font-family; }
 
 /*
@@ -54,6 +56,7 @@ Markup:
 
 Styleguide 2.5.4
 */
+%u-brandLogo,
 .u-brandLogo {
   display: inline-block;
   width: map-get($brand-logo, width);
