--- a/Resources/Private/Sass/Utilities/_Display.scss
+++ b/Resources/Private/Sass/Utilities/_Display.scss
@@ -17,12 +17,18 @@ Markup:
 
 Styleguide 2.2.1
 */
+%u-block,
 .u-block {
   display: block !important;
 }
 
+%u-hidden,
 .u-hidden {
   display: none !important;
   visibility: hidden;
 }
-.u-invisible { visibility: hidden; }
+
+%u-invisible,
+.u-invisible {
+    visibility: hidden;
+}
