[DOCS] Fix the example usage of the cssTriangle mixin

--- a/Resources/Private/Sass/_Settings/_Mixins.scss
+++ b/Resources/Private/Sass/_Settings/_Mixins.scss
@@ -86,7 +86,7 @@ Markup:
 	top: -5px;
 	left: 50%;
 	margin-left: -2.5px;
-	@include css-triangle(5px, #fff, bottom);
+	@include cssTriangle(5px, #fff, bottom);
 }
 
 Styleguide 1.2.4
