--- a/Resources/Private/Sass/Generic/_Head.scss
+++ b/Resources/Private/Sass/Generic/_Head.scss
@@ -7,27 +7,24 @@ Declarations which should be put at the top of the document e.g. @font-face decl
 
 // Disabled until the WP8 CSS Viewport bug is fixed.
 // http://mattstow.com/responsive-design-in-ie10-on-windows-phone-8.html
-// @if $responsive {
-//   /*
-//   CSS Viewport
-//   */
-//   @viewport { width: device-width; zoom: 1; }
-// }
+//
+// /*
+// CSS Viewport
+// */
+// @viewport { width: device-width; zoom: 1; }
+//
 
-
-@if $global-border-box {
-	/*
-	Global border-box
-	@docs http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
-	*/
-	html {
-  	box-sizing: border-box;
-	}
-	* {
-		&,
-		&:before,
-		&:after {
-			box-sizing: inherit;
-		}
+/*
+Global border-box
+@docs http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+*/
+html {
+	box-sizing: border-box;
+}
+* {
+	&,
+	&:before,
+	&:after {
+		box-sizing: inherit;
 	}
 }
