--- a/Resources/Private/Sass/Generic/_Normalize.scss
+++ b/Resources/Private/Sass/Generic/_Normalize.scss
@@ -51,31 +51,14 @@ video {
 Normalize Base
 */
 /**
- * 1. Corrects text resizing oddly in IE6/7 when body `font-size` is set using
- *    `em` units.
- * 2. Prevents iOS text size adjust after orientation change, without disabling
+ * 1. Prevents iOS text size adjust after orientation change, without disabling
  *    user zoom.
- * 3. Forces vertical scrollbar to prevent jumpy page
+ * 2. Forces vertical scrollbar to prevent jumpy page
  */
 html {
-	@if $legacy-normalizecss { font-size: 100%; /* 1 */ }
-	-webkit-text-size-adjust: 100%; /* 2 */
-	-ms-text-size-adjust: 100%; /* 2 */
-	overflow-y: scroll; /* 3 */
-}
-
-@if $legacy-normalizecss {
-	/**
-	 * Addresses `font-family` inconsistency between `textarea` and other form
-	 * elements.
-	 */
-	html,
-	button,
-	input,
-	select,
-	textarea {
-		font-family: $base-font-family;
-	}
+	-webkit-text-size-adjust: 100%; /* 1 */
+	-ms-text-size-adjust: 100%; /* 1 */
+	overflow-y: scroll; /* 2 */
 }
 
 
@@ -94,9 +77,6 @@ textarea {
 	font-size: 100%; /* 1 */
 	margin: 0; /* 2 */
 	vertical-align: baseline; /* 3 */
-	@if $legacy-normalizecss {
-		*vertical-align: middle; /* 3 */
-	}
 }
 
 /**
@@ -135,8 +115,6 @@ select {
  * 2. Corrects inability to style clickable `input` types in iOS.
  * 3. Improves usability and consistency of cursor style between image-type
  *    `input` and others.
- * 4. Removes inner spacing in IE7 without affecting normal text inputs.
- *    Known issue: inner spacing remains in IE6.
  */
 button,
 html input[type="button"], /* 1 */
@@ -144,9 +122,6 @@ input[type="reset"],
 input[type="submit"] {
 	-webkit-appearance: button; /* 2 */
 	cursor: pointer; /* 3 */
-	@if $legacy-normalizecss {
-		*overflow: visible;  /* 4 */
-	}
 }
 
 /**
@@ -160,17 +135,11 @@ html input[disabled] {
 /**
  * 1. Addresses box sizing set to content-box in IE8/9.
  * 2. Removes excess padding in IE8/9.
- * 3. Removes excess padding in IE7.
- *    Known issue: excess padding remains in IE6.
  */
 input[type="checkbox"],
 input[type="radio"] {
 	box-sizing: border-box; /* 1 */
 	padding: 0; /* 2 */
-	@if $legacy-normalizecss {
-		*height: 13px; /* 3 */
-		*width: 13px; /* 3 */
-	}
 }
 
 /**
@@ -180,11 +149,7 @@ input[type="radio"] {
  */
 input[type="search"] {
 	-webkit-appearance: textfield; /* 1 */
-	@if $global-border-box == false {
-		-webkit-box-sizing: content-box; /* 2 */
-			 -moz-box-sizing: content-box;
-						box-sizing: content-box;
-	}
+	box-sizing: content-box; /* 2 */
 }
 
 /**
